Add body and image to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-hello world. we are so excited to introduce sable dreams to you. 
+<body style="background-color:#fdfaf6; display:flex; justify-content:center; align-items:center; height:100vh; margin:0;">
+  <img src="Sd-seal.png" alt="Sable Dreams Seal" style="max-width: 400px; height: auto;" />
+</body>
+
