--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <body style="background-color:#fdfaf6; display:flex; justify-content:center; align-items:center; height:100vh; margin:0;">
   <img src="Sd-seal.png" alt="Sable Dreams Seal" style="max-width: 400px; height: auto;" />
 </body>
+<link rel="icon" type="image/png" href="Sd-seal.png">
 
