Fix body tag placement in index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<body style="background-color:#fdfaf6; display:flex; justify-content:center; align-items:center; height:100vh; margin:0;">
-  <img src="Sd-seal.png" alt="Sable Dreams Seal" style="max-width: 400px; height: auto;" />
-</body>
 <head>
   <meta charset="UTF-8" />
   <title>Sable Dreams</title>
   <link rel="icon" type="image/png" href="Sd-seal.png">
 </head>
 
-
+<body style="background-color:#fdfaf6; display:flex; justify-content:center; align-items:center; height:100vh;">
+  <img src="Sd-seal.png" alt="Sable Dreams Seal" style="max-width: 400px; height: auto;" />
+</body>
